--- a/docs/introduction/installation.mdx
+++ b/docs/introduction/installation.mdx
@@ -2,6 +2,9 @@
 sidebar_position: 4
 ---
 
+import Tabs from '@theme/Tabs'
+import TabItem from '@theme/TabItem'
+
 # Installation
 
 ## Download PCA
@@ -17,16 +20,22 @@ PCA requires **Creation Kit** (CK) to compile your files. _More ways could come 
   Download it from your Steam library in **Tools** section.
 - For FO4: CK is available on the [Bethesda Launcher](https://www.bethesda.net/en/game/bethesda-launcher).
 
-Then, you need to extract the `Data\Scripts.zip` file which contains all basic psc files
+:::note
+You need to extract the file `Data\Scripts.zip` which contains all basic psc files
 to compile any papyrus script. This file is available when CK is installed.
 
-### For SE, AE and VR
-
-Make sure the files is available in `Data\Source\Scripts`
-
-### For LE and FO4
-
-Make sure the files is available in `Data\Scripts\Source`
+<Tabs>
+  <TabItem value="se-ae-vr" label="Skyrim SE, AE or VR" default>
+    Make sure the files is available in <code>Data\Source\Scripts</code>
+  </TabItem>
+  <TabItem value="le" label="Skyrim LE">
+    Make sure the files is available in <code>Data\Scripts\Source</code>
+  </TabItem>
+  <TabItem value="fo4" label="Fallout 4">
+    Make sure the files is available in <code>Data\Scripts\Source</code>
+  </TabItem>
+</Tabs>
+:::
 
 ## Mod manager
 
