Changelog 2022.1, migration to steam, chores

--- a/docs/introduction/installation.mdx
+++ b/docs/introduction/installation.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem'
 ## Download PCA
 
 [Download](https://www.nexusmods.com/skyrimspecialedition/mods/23852) the latest version of PCA on Nexus mods and extract it anywhere you want.
-Installing PCA inside a directory that needs admin privileges (mainly Program Files folder) is **not recommended**.
+It is **not recommended** to install PCA inside a directory that needs admin privileges (mainly Program Files folder).
 
 ## Requirements
 
@@ -19,6 +19,10 @@ PCA requires **Creation Kit** (CK) to compile your files. _More ways could come 
 - For AE/SE/VR/LE: CK is available on [Steam](https://store.steampowered.com/app/489830/The_Elder_Scrolls_V_Skyrim_Special_Edition/).
   Download it from your Steam library in **Tools** section.
 - For FO4: CK is available on the [Bethesda Launcher](https://www.bethesda.net/en/game/bethesda-launcher).
+
+  :::warning
+  Bethesda Launcher will be removed in 2022. Make sure to [migrate to Steam](https://bethesda.net/en/article/2RXxG1y000NWupPalzLblG/sunsetting-the-bethesda-net-launcher-and-migrating-to-steam).
+  :::
 
 :::note
 You need to extract the file `Data\Scripts.zip` which contains all basic psc files
