Better support page

--- a/docs/introduction/installation.mdx
+++ b/docs/introduction/installation.mdx
@@ -29,13 +29,13 @@ You need to extract the file `Data\Scripts.zip` which contains all basic psc fil
 to compile any papyrus script. This file is available when CK is installed.
 
 <Tabs>
-  <TabItem value="se-ae-vr" label="Skyrim SE, AE or VR" default>
+  <TabItem value="se-ae-vr" label="SE, AE or VR" default>
     Make sure the files is available in <code>Data\Source\Scripts</code>
   </TabItem>
-  <TabItem value="le" label="Skyrim LE">
+  <TabItem value="le" label="LE">
     Make sure the files is available in <code>Data\Scripts\Source</code>
   </TabItem>
-  <TabItem value="fo4" label="Fallout 4">
+  <TabItem value="fo4" label="FO4">
     Make sure the files is available in <code>Data\Scripts\Source</code>
   </TabItem>
 </Tabs>
