--- a/docs/introduction/installation.mdx
+++ b/docs/introduction/installation.mdx
@@ -20,7 +20,7 @@ PCA requires **Creation Kit** (CK) to compile your files. _More ways could come 
   Download it from your Steam library in **Tools** section.
 - For FO4: CK is available on the [Bethesda Launcher](https://www.bethesda.net/en/game/bethesda-launcher).
 
-  :::warning
+  :::info Fallout 4
   Bethesda Launcher will be removed in 2022. Make sure to [migrate to Steam](https://bethesda.net/en/article/2RXxG1y000NWupPalzLblG/sunsetting-the-bethesda-net-launcher-and-migrating-to-steam).
   :::
 
@@ -32,10 +32,7 @@ to compile any papyrus script. This file is available when CK is installed.
   <TabItem value="se-ae-vr" label="SE, AE or VR" default>
     Make sure the files is available in <code>Data\Source\Scripts</code>
   </TabItem>
-  <TabItem value="le" label="LE">
-    Make sure the files is available in <code>Data\Scripts\Source</code>
-  </TabItem>
-  <TabItem value="fo4" label="FO4">
+  <TabItem value="le-fo4" label="LE or FO4">
     Make sure the files is available in <code>Data\Scripts\Source</code>
   </TabItem>
 </Tabs>
@@ -53,6 +50,7 @@ Only purchased versions are supported.
 
 - AE
 - SE
+- VR
 - LE
 - FO4
 
