--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -17,7 +17,7 @@ Before reporting a bug, provide a debug log in your issue.
 ### How can I get a debug log?
 
 <Tabs lazy>
-  <TabItem value="manual" label="Manual" default>
+  <TabItem value="classic" label="Classic" default>
     <p>
       Use <code>PCA SE-debug.exe.cmd</code> instead of <code>PCA SE.exe</code>.
     </p>
