--- a/blog/2022-03-14-2022.1/index.mdx
+++ b/blog/2022-03-14-2022.1/index.mdx
@@ -9,6 +9,12 @@ import GithubIssue from "../../src/components/GithubIssue";
 
 # 2022.1
 
+### Bug fixes
+
+- Fallout 4 supportgit commi
+
+- When closing the drawer panel, links could break into multiple lines
+
 ### Features
 
 - The configuration is now checked when you enter the compilation page, giving you any tips if your configuration is wrong (<GithubIssue issue={138} />)
@@ -29,7 +35,7 @@ import GithubIssue from "../../src/components/GithubIssue";
   ![script_list.png](script_list.png)
 
 - Recent files dialog displays more scripts at once
-  
+
   ![recent-files.png](recent-files.png)
 
 - A loading screen now appear when the application start
@@ -48,7 +54,3 @@ import GithubIssue from "../../src/components/GithubIssue";
 - Bumps dependencies
 - Changelog window correctly displays images
 - The application restarts when resetting the configuration
-
-### Bug fixes
-
-- When closing the drawer panel, links could break into multiple lines
