Information about Fallout 4 ck scripts zip files

--- a/docs/introduction/installation.mdx
+++ b/docs/introduction/installation.mdx
@@ -18,6 +18,7 @@ PCA requires **Creation Kit** (CK) to compile your files. _More ways could come 
 
 - For AE/SE/VR/LE: CK is available on [Steam](https://store.steampowered.com/app/489830/The_Elder_Scrolls_V_Skyrim_Special_Edition/).
   Download it from your Steam library in **Tools** section.
+
 - For FO4: CK is available on the [Bethesda Launcher](https://www.bethesda.net/en/game/bethesda-launcher).
 
   :::info Fallout 4
@@ -38,6 +39,10 @@ to compile any papyrus script. This file is available when CK is installed.
 </Tabs>
 :::
 
+:::warning Fallout 4
+Extract all zip files inside Data\Scripts\Source.
+:::
+
 ## Mod manager
 
 We officially support MO2.
@@ -46,7 +51,7 @@ We officially support MO2.
 
 ## Supported versions
 
-Only purchased versions are supported.
+Only purchased versions of the games are supported.
 
 - AE
 - SE
