Add screenshots into the Homepage

--- a/docs/introduction/installation.mdx
+++ b/docs/introduction/installation.mdx
@@ -40,7 +40,7 @@ to compile any papyrus script. This file is available when CK is installed.
 :::
 
 :::warning Fallout 4
-Extract all zip files inside Data\Scripts\Source.
+Extract all zip files inside `Data\Scripts\Source`.
 :::
 
 ## Mod manager
