--- a/blog/2022-05-06-2022.1/index.mdx
+++ b/blog/2022-05-06-2022.1/index.mdx
@@ -12,9 +12,8 @@ import GithubIssue from "../../src/components/GithubIssue";
 ### Bug fixes
 
 - ## **Fallout 4 support**
-
+- "Command line is too long" error should occur less by using Powershell. Powershell is installed by default starting with Windows 7.
 - When closing the drawer panel, links could break into multiple lines
-
 - Duplicated logs entry
 
 ### Features
@@ -29,16 +28,13 @@ import GithubIssue from "../../src/components/GithubIssue";
 ![group_preview_open.png](group_preview_open.png)
 
 - New design
-
 - The configuration is now checked when you enter the compilation page, giving you any tips if your configuration is wrong.
-
 - Better mo2 configuration check
-
 - Button to open compilation logs now changes color at the end of a compilation
 
-_Green_: when all scripts compile successfully
+  _Green_: when all scripts compile successfully
 
-_Red_: when a script gone wrong
+  _Red_: when a script gone wrong
 
 - New documentation released: access the documentation via NexusMods or with the new button at the bottom left
 
@@ -49,7 +45,6 @@ _Red_: when a script gone wrong
 ![script_list.png](script_list.png)
 
 - Recent files: option to show the script's full path (<GithubIssue issue="130" />)
-
 - Recent files dialog displays more scripts at once
 
 It is now easier to click on a line
